[package]
name = "hive-gateway-tests"
version = "0.1.0"
edition = "2021"
description = "Cross-crate integration tests for the HiveFabric gateway stack"

[[test]]
name = "smoke"
path = "tests/smoke.rs"

[[test]]
name = "sensitivity"
path = "tests/sensitivity.rs"

[[test]]
name = "cancellation"
path = "tests/cancellation.rs"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
